[workspace]
resolver = "2"
members = [
  "Twilight"
]

[profile.release]
opt-level           = 3
overflow-checks     = false
debug-assertions    = false
lto                 = "thin"

[profile.fat-release]
inherits          = "release"
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = "fat"
